Add Doucment type to verification

--- a/app/views/client/verifications/new.html.slim
+++ b/app/views/client/verifications/new.html.slim
@@ -23,8 +23,12 @@
     .row
       .col-md-9
         .row
-          .col-md-6
-            / Тип документов
+          .col-md-10
+            = f.input :document_type,
+                    as: :radio_buttons,
+                    label: false,
+                    collection: document_type_collection_for_radio_buttons,
+                    item_wrapper_class: 'd-inline-block'
             = f.input :document_number
           .col-md-5
       .col-md-3
