--- a/app/views/client/verifications/new.html.slim
+++ b/app/views/client/verifications/new.html.slim
@@ -53,9 +53,9 @@
           li Документ на фото размещен полностью, края не обрезаны
           li На фото нет дополнительных объектов
           li
-            | Размер: 50,0 КБ до 50,0 МБ
+            | Размер: #{ number_to_human_size(Rails.configuration.application.min_upload_file_size)} до #{ number_to_human_size(Rails.configuration.application.max_upload_file_size)}
             br
-            | Формат: JPG, JPEG, PNG
+            | Формат: #{content_type_to_extensions(Rails.configuration.application.image_content_types)}
           li В случае необходимости поддержка может запросить дополнительную информацию, например - видео с документами
     .row
       .col-12
