--- a/app/views/admin/verifications/_notify.slim
+++ b/app/views/admin/verifications/_notify.slim
@@ -9,7 +9,7 @@ div
 
   #verification_callback_result
   
-  - if verification.notifed_at
+  - if verification.notified_at
     .text-small Последнее уведомление
-    = I18n.l verification.notifed_at
+    = I18n.l verification.notified_at
 
