--- a/app/views/admin/verifications/_notify.slim
+++ b/app/views/admin/verifications/_notify.slim
@@ -1,11 +1,14 @@
 div
-  = link_to 'Обновить статус в приложении', 
+  = link_to 'Уведомить приложение',
     notify_admin_verification_path(verification), 
     method: :post, 
     class: 'btn btn-secondary btn-sm', 
     data: { 'disable-width' => 'Отправляю..' },
     remote: true, 
     id: :verification_callback_form
+
+  - unless verification.applicant.last_confirmed_verification == verification
+    .text-danger Внимание! Это не последняя заявка.
 
   #verification_callback_result
   
