--- a/app/views/client/verifications/new.html.slim
+++ b/app/views/client/verifications/new.html.slim
@@ -7,7 +7,7 @@
       .col-md-12
         div = f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present?
 
-    - if defined?(last_refused_verification) && last_refused_verification.present?
+    - if last_refused_verification.present?
       h3= t('.last_refused_title')
       .alert.alert-warning.pre-line role='alert'
         = last_refused_verification.public_comment
