--- a/app/views/client/verifications/new.html.slim
+++ b/app/views/client/verifications/new.html.slim
@@ -1,61 +1,63 @@
-.row.justify-content-center.mt-4
-  .jumbotron.col-12
-    h1.mb-4
-      = t '.title', account_id: verification.applicant.external_id, org: current_account.public_name
-    .row.mt-4
+.container
+  h1 =t '.title'
+  h4 = verification.applicant.external_id
+.container
+  = simple_form_for verification, url: form_path, html: { multipart: true, novalidate: false } do |f|
+    .row
       .col-md-12
-        .alert.alert-warning role='alert'
-          = raw verification.applicant.account.form_description_interpolated
-        - if defined?(last_refused_verification) && last_refused_verification.present?
-          h3= t('.last_refused_title')
-          .alert.alert-warning.pre-line role='alert'
-            = last_refused_verification.public_comment
-    = simple_form_for verification, url: form_path, html: { multipart: true, novalidate: false } do |f|
-      .row
-        .col-md-12
-          div = f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present?
-      .row
-      .row
-        .col-12.col-sm-4
-          = f.input :name
-        .col-12.col-sm-4
-          = f.input :last_name
-        .col-12.col-sm-4
-          = f.input :patronymic
-      .row
-        .col-12.col-sm-4
-          = f.input :birth_date, as: :date_picker
-        .col-12.col-sm-4
-          = f.input :gender,
-                  collection: Verification::GENDERS,
-                  label_method: lambda { |item| t("attributes.genders.#{item}") }
+        div = f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present?
 
-      .row
-        .col-12.col-sm-6
-
-          = f.input :citizenship_country_iso_code,
+    - if last_refused_verification.present?
+      h3= t('.last_refused_title')
+      .alert.alert-warning.pre-line role='alert'
+        = last_refused_verification.public_comment
+    h3 = t '.personal_data'
+    .row
+      .col-md-9
+        .row
+          .col-md-6
+            = f.input :name
+            = f.input :last_name
+            = f.input :patronymic
+          .col-md-6
+            = f.input :citizenship_country_iso_code,
                     as: :select,
                     collection: country_options_for_select
+            = f.input :birth_date, as: :date_picker
+            = f.input :email, as: :email
 
-        .col-12.col-sm-6
-          = f.input :document_number
-      .row
-        .col-12.col-sm-6
-          = f.input :reason,
-            include_blank: false,
-            collection: Verification::REASONS,
-            label_method: lambda { |reason| t(reason, scope: 'attributes.reasons') },
-            input_html: { data: { 'verification-reason': true } }
-        .col-12.col-sm-6
-          = f.input :email, as: :email
-      .row[data-applicant-comment]
-        .col-12
-          = f.input :applicant_comment, as: :text, placeholder: t('.applicant_comment_placeholder')
-      .row
-        = f.simple_fields_for :verification_documents do |document|
-          .col-4
-            = render 'document_field', document: document
-      .row
-        .col-12
-          .text-center
-            = f.submit class: 'btn btn-lg btn-primary', data: { 'disable-width' => 'Отправляю..' }
+      .col-md-3
+    h3 =t '.choose_document_type'
+    .row
+      .col-md-9
+        .row
+          .col-md-12
+            = f.input :document_type,
+                    as: :radio_buttons,
+                    label: false,
+                    collection: document_type_collection_for_radio_buttons,
+                    wrapper: :horizontal_collection_inline
+            = f.input :document_number
+      .col-md-3
+    .row
+      .col-md-9
+        h3  =t '.upload_document_photo'
+        .row
+          = f.simple_fields_for :verification_documents do |document|
+            .col-md-4
+              = render 'document_field', document: document
+      .col-md-3
+        h3 Инструкция
+        ul
+          li Убедитесь, что Ваше лицо и все детали документов на фото чекто видны
+          li Документ на фото размещен полностью, края не обрезаны
+          li На фото нет дополнительных объектов
+          li
+            | Размер: #{ number_to_human_size(Rails.configuration.application.min_upload_file_size)} до #{ number_to_human_size(Rails.configuration.application.max_upload_file_size)}
+            br
+            | Формат: #{content_type_to_extensions(Rails.configuration.application.image_content_types)}
+          li В случае необходимости поддержка может запросить дополнительную информацию, например - видео с документами
+    .row
+      .col-12
+        .text-right
+          = f.submit t('.submit'), class: 'btn btn-lg btn-primary', data: { 'disable-width' => 'Отправляю..' }
