--- a/app/views/client/verifications/_document_field.slim
+++ b/app/views/client/verifications/_document_field.slim
@@ -4,8 +4,7 @@
                    as: :file,
                    value: :file_cache,
                    label: document.object.document_type.title,
-                   input_html: { accept: document.object.document_type.content_types.join(',')},
-                   hint: document_file_hint
+                   input_html: { accept: document.object.document_type.content_types.join(',')}
 
   = document.input :file_cache, as: :hidden
   = document.input :document_type_id, as: :hidden
