--- a/app/views/client/verifications/new.html.slim
+++ b/app/views/client/verifications/new.html.slim
@@ -1,6 +1,8 @@
-.container
-  h1 =t '.title'
-  h4 = verification.applicant.external_id
+.border-bottom
+  .container
+    h1.h3.font-weight-semibold.mt-4 =t '.title'
+    h4.h6 = verification.applicant.external_id
+
 .container
   = simple_form_for verification, url: form_path, html: { multipart: true, novalidate: false } do |f|
     .row
@@ -8,11 +10,16 @@
         div = f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present?
 
     - if last_refused_verification.present?
-      h3= t('.last_refused_title')
-      .alert.alert-warning.pre-line role='alert'
-        = last_refused_verification.public_comment
-    h3 = t '.personal_data'
-    .row
+      .position-absolute.mt-4 style="top: 0; left: 0; right: 0;"
+        .row
+          .col-md-5
+          .col-md-3
+            / h3 =t('.last_refused_title')
+            .alert.alert-warning.pre-line.px-4.py-3 role='alert'
+              = last_refused_verification.public_comment
+
+    h3.mt-3.text-primary.font-weight-bold = t '.personal_data'
+    .row.mt-4
       .col-md-9
         .row
           .col-md-6
@@ -27,10 +34,11 @@
             = f.input :email, as: :email
 
       .col-md-3
-    h3 =t '.choose_document_type'
+
+    h3.mt-4.text-primary.font-weight-bold =t '.choose_document_type'
     .row
       .col-md-9
-        .row
+        .row.mt-3
           .col-md-12
             = f.input :document_type,
                     as: :radio_buttons,
@@ -39,15 +47,16 @@
                     wrapper: :horizontal_collection_inline
             = f.input :document_number
       .col-md-3
-    .row
+
+    .row.mt-5
       .col-md-9
-        h3  =t '.upload_document_photo'
-        .row
+        h3.text-primary.font-weight-bold  =t '.upload_document_photo'
+        .row.mt-3
           = f.simple_fields_for :verification_documents do |document|
             .col-md-4
               = render 'document_field', document: document
       .col-md-3
-        h3 Инструкция
+        h3.text-primary.font-weight-bold Инструкция
         ul
           li Убедитесь, что Ваше лицо и все детали документов на фото чекто видны
           li Документ на фото размещен полностью, края не обрезаны
@@ -57,7 +66,9 @@
             br
             | Формат: #{content_type_to_extensions(Rails.configuration.application.image_content_types)}
           li В случае необходимости поддержка может запросить дополнительную информацию, например - видео с документами
-    .row
-      .col-12
+
+    .row.mt-4
+      .col-8
+      .col-4
         .text-right
-          = f.submit t('.submit'), class: 'btn btn-lg btn-primary', data: { 'disable-width' => 'Отправляю..' }
+          = f.submit t('.submit'), class: 'btn btn-lg btn-primary w-100', data: { 'disable-width' => 'Отправляю..' }
