--- a/app/views/shared/_navbar.html.slim
+++ b/app/views/shared/_navbar.html.slim
@@ -33,5 +33,6 @@ nav.navbar.navbar-expand-lg.navbar-light.bg-light.flex-column.flex-md-row.sticky
             .dropdown-menu.dropdown-menu-right[aria-labelledby="navbarDropdown"]
               = link_to t('.users'), admin_members_path, class: 'dropdown-item'
               = link_to t('.review_result_labels'), admin_review_result_labels_path, class: 'dropdown-item'
+              = link_to t('.document_types'), admin_document_types_path, class: 'dropdown-item'
               = link_to t('.profile'), admin_account_path, class: 'dropdown-item'
         = render 'user_dropdown'
