--- a/app/views/client/verifications/new.html.slim
+++ b/app/views/client/verifications/new.html.slim
@@ -1,7 +1,7 @@
 .border-bottom
   .container
     h1.h3.font-weight-semibold.mt-4 =t '.title'
-    h4.h6 = verification.applicant.external_id
+    h4.h6.mb-3.font-weight-normal = verification.applicant.external_id
 
 .container
   = simple_form_for verification, url: form_path, html: { multipart: true, novalidate: false } do |f|
@@ -51,24 +51,113 @@
     .row.mt-5
       .col-md-9
         h3.text-primary.font-weight-bold  =t '.upload_document_photo'
-        .row.mt-3
-          = f.simple_fields_for :verification_documents do |document|
-            .col-md-4
-              = render 'document_field', document: document
-      .col-md-3
-        h3.text-primary.font-weight-bold Инструкция
-        ul
-          li Убедитесь, что Ваше лицо и все детали документов на фото чекто видны
-          li Документ на фото размещен полностью, края не обрезаны
-          li На фото нет дополнительных объектов
-          li
-            | Размер: #{ number_to_human_size(Rails.configuration.application.min_upload_file_size)} до #{ number_to_human_size(Rails.configuration.application.max_upload_file_size)}
-            br
-            | Формат: #{content_type_to_extensions(Rails.configuration.application.image_content_types)}
-          li В случае необходимости поддержка может запросить дополнительную информацию, например - видео с документами
+        .row.mt-3.align-items-end.justify-content-between
+          .col-md-5
+            p
+              span.text-primary.font-weight-semibold= '1. '
+              = 'Фотография или скан действительного документа, удостоверяющего личность'
 
-    .row.mt-4
+            div data-file-input=""
+              .img-thumbnail.d-flex.align-items-center.justify-content-center.py-4.mb-3 style="height: 230px; border-style: dashed"
+                = image_tag asset_url('photo-doc-example-1@2x.png'), width: 186, class: 'w-50', data: {'preview-placeholder': ''}
+                img style="max-width: 80%; max-height: 100%;" data-preview=""
+
+              div data-controls=""
+                label.form-control.p-0.m-0.input-group.overflow-hidden style="cursor: pointer"
+                  span.input-group-prepend
+                    span.input-group-text.bg-primary.text-white.border-0.rounded-0
+                      | Загрузить файл
+                  span.flex-grow-1.d-flex.align-items-center.justify-content-center.text-muted
+                    | Файл не выбран
+                  input.custom-file-input.position-absolute type="file" accept="image/*" style="height: 0" data-input=""
+              
+              div style="display: none" data-filename-container=""
+                button.form-control.p-0.m-0.input-group.overflow-hidden.flex-nowrap style="cursor: pointer" type="button" data-clear-button=""
+                  span.input-group-prepend
+                    span.input-group-text.bg-light.text-black.border-0.rounded-0
+                      | Файл загружен
+                  span.flex-grow-1.d-flex.align-items-center.justify-content-center.text-muted.position-relative style="min-width: 0"
+                    span.text-truncate.w-75.pr-3 data-filename=""
+                    span.position-absolute.px-3 style="right: 0"
+                      | &times;
+
+          .col-md-5
+            p
+              span.text-primary.font-weight-semibold= '2. '
+              = 'Селфи с документом и листком бумаги, с текущей датой и фразой «для криптобанка Bitzlato»'
+            div data-file-input=""
+              .img-thumbnail.d-flex.align-items-center.justify-content-center.py-4.mb-3 style="height: 230px; border-style: dashed"
+                = image_tag asset_url('photo-doc-example-1@2x.png'), width: 186, class: 'w-50', data: {'preview-placeholder': ''}
+                img style="max-width: 80%; max-height: 100%;" data-preview=""
+
+              div data-controls=""
+                label.form-control.p-0.m-0.input-group.overflow-hidden style="cursor: pointer"
+                  span.input-group-prepend
+                    span.input-group-text.bg-primary.text-white.border-0.rounded-0
+                      | Загрузить файл
+                  span.flex-grow-1.d-flex.align-items-center.justify-content-center.text-muted
+                    | Файл не выбран
+                  input.custom-file-input.position-absolute type="file" accept="image/*" style="height: 0" data-input=""
+              
+              div style="display: none" data-filename-container=""
+                button.form-control.p-0.m-0.input-group.overflow-hidden.flex-nowrap style="cursor: pointer" type="button" data-clear-button=""
+                  span.input-group-prepend
+                    span.input-group-text.bg-light.text-black.border-0.rounded-0
+                      | Файл загружен
+                  span.flex-grow-1.d-flex.align-items-center.justify-content-center.text-muted.position-relative style="min-width: 0"
+                    span.text-truncate.w-75.pr-3 data-filename=""
+                    span.position-absolute.px-3 style="right: 0"
+                      | &times;
+
+      / .col-md-9
+      /   h3.text-primary.font-weight-bold  =t '.upload_document_photo'
+      /   .row.mt-3
+      /     = f.simple_fields_for :verification_documents do |document|
+      /       .col-md-4
+      /         = render 'document_field', document: document
+
+      .col-md-3
+        .pl-5
+          h3.text-primary.font-weight-bold Инструкция
+
+          .d-flex.align-items-center.mt-3.mb-2
+            .flex-shrink-0.mr-3.align-self-start
+              = image_tag asset_url('desktop-verification/file-text@2x.png'), width: 13
+            p.small.mb-0
+              | Убедитесь, что Ваше лицо и все детали документов на фото четко видны
+
+          .d-flex.align-items-center.mb-2
+            .flex-shrink-0.mr-3.align-self-start
+              = image_tag asset_url('desktop-verification/file-earmark-check@2x.png'), width: 13
+            p.small.mb-0
+              | Документ на фото размещен полностью, края не обрезаны
+
+          .d-flex.align-items-center.mb-2
+            .flex-shrink-0.mr-3.align-self-start
+              = image_tag asset_url('desktop-verification/file-x@2x.png'), width: 13
+            p.small.mb-0
+              | На фото нет дополнительных объектов
+
+          .d-flex.align-items-center.mb-2
+            .flex-shrink-0.mr-3.align-self-start
+              = image_tag asset_url('desktop-verification/file-richtext@2x.png'), width: 13
+            p.small.mb-0
+              = 'Размер: 50,0 КБ до 50,0 МБ'
+              br
+              = 'Формат: JPG, JPEG, PNG'
+          
+          .border-top.my-3
+
+          .d-flex.align-items-center.mb-2
+            .flex-shrink-0.mr-3.align-self-start
+              = image_tag asset_url('desktop-verification/shield-lock@2x.png'), width: 13
+            p.small.mb-0
+              | В случае необходимости служба поддержки может запросить дополнительную информацию, например - видео с документом
+
+    .row.mt-5
       .col-8
       .col-4
         .text-right
           = f.submit t('.submit'), class: 'btn btn-lg btn-primary w-100', data: { 'disable-width' => 'Отправляю..' }
+
+= render 'photo_upload_script'
