fix: Move thank_you template to created. Fix radio accent color [#182486268]

--- a/app/assets/stylesheets/verification.scss
+++ b/app/assets/stylesheets/verification.scss
@@ -65,6 +65,5 @@ ol {
 .form-check-input {
   width: 16px;
   height: 16px;
-  background-color: $color-primary;
-  border-color: $color-primary;
+  accent-color: $color-primary;
 }
