--- a/app/views/client/verifications/_document_field_designed.slim
+++ b/app/views/client/verifications/_document_field_designed.slim
@@ -1,12 +1,12 @@
 p
   span.text-primary.font-weight-semibold= '1. '
   / = 'Фотография или скан действительного документа, удостоверяющего личность'
-  = document.document_type.title
+  = document.object.document_type.title
 
 div data-file-input=""
   .img-thumbnail.d-flex.align-items-center.justify-content-center.py-4.mb-3 style="height: 230px; border-style: dashed"
     = image_tag asset_url('photo-doc-example-1@2x.png'), width: 186, class: 'w-50', data: {'preview-placeholder': ''}
-    img style="max-width: 80%; max-height: 100%;" data-preview="" src=f.file_cache.value
+    img style="max-width: 80%; max-height: 100%;" data-preview=""
 
   div data-controls=""
     label.form-control.p-0.m-0.input-group.overflow-hidden style="cursor: pointer"
@@ -15,7 +15,7 @@ div data-file-input=""
           | Загрузить файл
       span.flex-grow-1.d-flex.align-items-center.justify-content-center.text-muted
         | Файл не выбран
-      input.custom-file-input.position-absolute type="file" accept="image/*" style="height: 0" data-input=""
+      input.custom-file-input.position-absolute type="file" name=document.object_name+'[file]'  style="height: 0" data-input="" accept=document.object.document_type.content_types.join(',')
 
   div style="display: none" data-filename-container=""
     button.form-control.p-0.m-0.input-group.overflow-hidden.flex-nowrap style="cursor: pointer" type="button" data-clear-button=""
@@ -26,14 +26,13 @@ div data-file-input=""
         span.text-truncate.w-75.pr-3 data-filename=""
         span.position-absolute.px-3 style="right: 0"
           | &times;
-/
-/ .col-lg-12
-/   = document.input :file,
-/           wrapper: :vertical_file,
-/           as: :file,
-/           value: :file_cache,
-/           label: document.object.document_type.title,
-/           input_html: { accept: document.object.document_type.content_types.join(',')}
-/
-/   = document.input :file_cache, as: :hidden
-/   = document.input :document_type_id, as: :hidden
+.col-lg-12
+  = document.input :file,
+          wrapper: :vertical_file,
+          as: :file,
+          value: :file_cache,
+          label: document.object.document_type.title,
+          input_html: { accept: document.object.document_type.content_types.join(',')}
+
+  = document.input :file_cache, as: :hidden
+  = document.input :document_type_id, as: :hidden
