fix: Size of document number input

--- a/app/views/client/verifications/new.html.slim
+++ b/app/views/client/verifications/new.html.slim
@@ -49,8 +49,9 @@
                     label: false,
                     collection: document_type_collection_for_radio_buttons,
                     wrapper: :horizontal_collection_inline
-            .w-50
-              = f.input :document_number
+            .row
+              .col-md-6
+                = f.input :document_number
       .col-md-3
 
     .row.mt-5
