--- a/app/views/client/verifications/_document_field_designed.slim
+++ b/app/views/client/verifications/_document_field_designed.slim
@@ -6,7 +6,11 @@ p
 div data-file-input=""
   .img-thumbnail.d-flex.align-items-center.justify-content-center.py-4.mb-3 style="height: 230px; border-style: dashed"
     = image_tag asset_url('photo-doc-example-1@2x.png'), width: 186, class: 'w-50', data: {'preview-placeholder': ''}
-    img style="max-width: 80%; max-height: 100%;" data-preview=""
+    - if document.object.file.cached?
+      img style="max-width: 80%; max-height: 100%;" data-preview="" src=document.object.file.url
+    -else
+      img style="max-width: 80%; max-height: 100%;" data-preview=""
+
 
   div data-controls=""
     label.form-control.p-0.m-0.input-group.overflow-hidden style="cursor: pointer"
@@ -30,7 +34,7 @@ div data-file-input=""
   = document.input :file,
           wrapper: :vertical_file,
           as: :file,
-          value: :file_cache,
+          value: :huiyna,
           label: document.object.document_type.title,
           input_html: { accept: document.object.document_type.content_types.join(',')}
 
