--- a/app/views/client/verifications/new.html.slim
+++ b/app/views/client/verifications/new.html.slim
@@ -1,7 +1,11 @@
 .border-bottom
   .container
-    h1.h3.font-weight-semibold.mt-4 =t '.title'
-    h4.h6.mb-3.font-weight-normal = verification.applicant.external_id
+    .d-flex.align-items-center.justify-content-between.my-3
+      div
+        h1.h3.font-weight-semibold =t '.title'
+        h4.h6.font-weight-normal = verification.applicant.external_id
+      div
+        = image_tag asset_url('bz-logo.svg'), width: 40
 
 .container
   = simple_form_for verification, url: form_path, html: { multipart: true, novalidate: false } do |f|
@@ -45,7 +49,9 @@
                     label: false,
                     collection: document_type_collection_for_radio_buttons,
                     wrapper: :horizontal_collection_inline
-            = f.input :document_number
+            .row
+              .col-md-6
+                = f.input :document_number
       .col-md-3
 
     .row.mt-5
@@ -87,7 +93,7 @@
               = 'Селфи с документом и листком бумаги, с текущей датой и фразой «для криптобанка Bitzlato»'
             div data-file-input=""
               .img-thumbnail.d-flex.align-items-center.justify-content-center.py-4.mb-3 style="height: 230px; border-style: dashed"
-                = image_tag asset_url('photo-doc-example-1@2x.png'), width: 186, class: 'w-50', data: {'preview-placeholder': ''}
+                = image_tag asset_url('photo-doc-example-2@2x.png'), width: 186, class: 'w-50', data: {'preview-placeholder': ''}
                 img style="max-width: 80%; max-height: 100%;" data-preview=""
 
               div data-controls=""
@@ -154,7 +160,7 @@
             p.small.mb-0
               | В случае необходимости служба поддержки может запросить дополнительную информацию, например - видео с документом
 
-    .row.mt-5
+    .row.my-5
       .col-8
       .col-4
         .text-right
