--- a/app/views/client/verifications/_document_field.slim
+++ b/app/views/client/verifications/_document_field.slim
@@ -4,7 +4,7 @@ p
 
 div data-file-input=""
   .img-thumbnail.d-flex.align-items-center.justify-content-center.py-4.mb-3 style="height: 230px; border-style: dashed"
-    = image_tag asset_url('photo-doc-example-1@2x.png'), width: 186, class: 'w-50', data: {'preview-placeholder': ''}
+    = image_tag asset_url(document.object.document_type.placeholder_photo || ''), width: 186, class: 'w-50', data: {'preview-placeholder': ''}
     img style="max-width: 80%; max-height: 100%;" data-preview=""
 
 
