--- a/app/views/admin/document_types/index.slim
+++ b/app/views/admin/document_types/index.slim
@@ -8,6 +8,8 @@
       tr
         th Название
         th Тип Файла
+        th Позиция
+        th Placeholder Photo
         th Ext
         th
 
@@ -16,6 +18,8 @@
         tr
           td = document_type.title
           td = document_type.file_type
+          td = document_type.position
+          td = document_type.placeholder_photo
           td = content_type_to_extensions(document_type.content_types)
           td
             = render 'archive_button', document_type: document_type
