--- a/app/views/client/verifications/new.html.slim
+++ b/app/views/client/verifications/new.html.slim
@@ -58,70 +58,9 @@
       .col-md-9
         h3.text-primary.font-weight-bold  =t '.upload_document_photo'
         .row.mt-3.align-items-end.justify-content-between
-          .col-md-5
-            p
-              span.text-primary.font-weight-semibold= '1. '
-              = 'Фотография или скан действительного документа, удостоверяющего личность'
-
-            div data-file-input=""
-              .img-thumbnail.d-flex.align-items-center.justify-content-center.py-4.mb-3 style="height: 230px; border-style: dashed"
-                = image_tag asset_url('photo-doc-example-1@2x.png'), width: 186, class: 'w-50', data: {'preview-placeholder': ''}
-                img style="max-width: 80%; max-height: 100%;" data-preview=""
-
-              div data-controls=""
-                label.form-control.p-0.m-0.input-group.overflow-hidden style="cursor: pointer"
-                  span.input-group-prepend
-                    span.input-group-text.bg-primary.text-white.border-0.rounded-0
-                      | Загрузить файл
-                  span.flex-grow-1.d-flex.align-items-center.justify-content-center.text-muted
-                    | Файл не выбран
-                  input.custom-file-input.position-absolute type="file" accept="image/*" style="height: 0" data-input=""
-              
-              div style="display: none" data-filename-container=""
-                button.form-control.p-0.m-0.input-group.overflow-hidden.flex-nowrap style="cursor: pointer" type="button" data-clear-button=""
-                  span.input-group-prepend
-                    span.input-group-text.bg-light.text-black.border-0.rounded-0
-                      | Файл загружен
-                  span.flex-grow-1.d-flex.align-items-center.justify-content-center.text-muted.position-relative style="min-width: 0"
-                    span.text-truncate.w-75.pr-3 data-filename=""
-                    span.position-absolute.px-3 style="right: 0"
-                      | &times;
-
-          .col-md-5
-            p
-              span.text-primary.font-weight-semibold= '2. '
-              = 'Селфи с документом и листком бумаги, с текущей датой и фразой «для криптобанка Bitzlato»'
-            div data-file-input=""
-              .img-thumbnail.d-flex.align-items-center.justify-content-center.py-4.mb-3 style="height: 230px; border-style: dashed"
-                = image_tag asset_url('photo-doc-example-2@2x.png'), width: 186, class: 'w-50', data: {'preview-placeholder': ''}
-                img style="max-width: 80%; max-height: 100%;" data-preview=""
-
-              div data-controls=""
-                label.form-control.p-0.m-0.input-group.overflow-hidden style="cursor: pointer"
-                  span.input-group-prepend
-                    span.input-group-text.bg-primary.text-white.border-0.rounded-0
-                      | Загрузить файл
-                  span.flex-grow-1.d-flex.align-items-center.justify-content-center.text-muted
-                    | Файл не выбран
-                  input.custom-file-input.position-absolute type="file" accept="image/*" style="height: 0" data-input=""
-              
-              div style="display: none" data-filename-container=""
-                button.form-control.p-0.m-0.input-group.overflow-hidden.flex-nowrap style="cursor: pointer" type="button" data-clear-button=""
-                  span.input-group-prepend
-                    span.input-group-text.bg-light.text-black.border-0.rounded-0
-                      | Файл загружен
-                  span.flex-grow-1.d-flex.align-items-center.justify-content-center.text-muted.position-relative style="min-width: 0"
-                    span.text-truncate.w-75.pr-3 data-filename=""
-                    span.position-absolute.px-3 style="right: 0"
-                      | &times;
-
-      / .col-md-9
-      /   h3.text-primary.font-weight-bold  =t '.upload_document_photo'
-      /   .row.mt-3
-      /     = f.simple_fields_for :verification_documents do |document|
-      /       .col-md-4
-      /         = render 'document_field', document: document
-
+          = f.simple_fields_for :verification_documents do |document|
+            .col-md-5
+              = render 'document_field', document: document
       .col-md-3
         .pl-5
           h3.text-primary.font-weight-bold Инструкция
@@ -148,10 +87,10 @@
             .flex-shrink-0.mr-3.align-self-start
               = image_tag asset_url('desktop-verification/file-richtext@2x.png'), width: 13
             p.small.mb-0
-              = 'Размер: 50,0 КБ до 50,0 МБ'
+              = "Размер: #{number_to_human_size(Rails.configuration.application.min_upload_file_size)} до #{number_to_human_size(Rails.configuration.application.max_upload_file_size)}"
               br
-              = 'Формат: JPG, JPEG, PNG'
-          
+              = "Формат: #{content_type_to_extensions(Rails.configuration.application.image_content_types)}"
+
           .border-top.my-3
 
           .d-flex.align-items-center.mb-2
