--- a/app/views/client/verifications/new.html.slim
+++ b/app/views/client/verifications/new.html.slim
@@ -34,7 +34,7 @@
             = f.input :citizenship_country_iso_code,
                     as: :select,
                     collection: country_options_for_select
-            = f.input :birth_date, as: :date_picker
+            = f.input :birth_date, as: :date_picker, icons: :font_awesome
             = f.input :email, as: :email
 
       .col-md-3
