--- a/app/views/layouts/verification.slim
+++ b/app/views/layouts/verification.slim
@@ -9,6 +9,7 @@ html
     = javascript_include_tag "https://code.jquery.com/jquery-3.3.1.min.js"
     = javascript_include_tag "https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
     = javascript_include_tag '//unpkg.com/@ungap/custom-elements'
+    = stylesheet_link_tag 'https://use.fontawesome.com/releases/v5.7.0/css/all.css'
 
     = stylesheet_link_tag "verification"
     = javascript_include_tag "verification"
