fix: Add primary color styles for datepicker (#163)
* fix: Add primary color styles for datepicker

# Conflicts:
#	app/assets/stylesheets/verification.scss

* fix: Add font awesomw icons for calendar. Fix styles

* fix: Select arrow styles

--- a/app/views/client/verifications/new.html.slim
+++ b/app/views/client/verifications/new.html.slim
@@ -33,8 +33,9 @@
           .col-md-6
             = f.input :citizenship_country_iso_code,
                     as: :select,
-                    collection: country_options_for_select
-            = f.input :birth_date, as: :date_picker
+                    collection: country_options_for_select,
+                    input_html: { class: 'custom-select' }
+            = f.input :birth_date, as: :date_picker, icons: :font_awesome
             = f.input :email, as: :email
 
       .col-md-3
